--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,5 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
-    compile 'com.kbeanie:image-chooser-library:1.6.0'
+    compile 'com.kbeanie:image-chooser-library:1.6.0@aar'
 }
