--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.1"
 
     defaultConfig {
         applicationId "ug.dataplus_systems.vcsmobile"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -39,16 +39,16 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
 
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
+    compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     compile 'com.github.jaydeepw:poly-picker:v1.0.22'
     compile 'net.i2p.android.ext:floatingactionbutton:1.10.0'
     compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'com.android.support:palette-v7:23.4.0'
+    compile 'com.android.support:palette-v7:24.1.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.easing:library:1.0.1@aar'
@@ -57,4 +57,5 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
     compile 'com.kbeanie:image-chooser-library:1.6.0@aar'
+    compile 'com.github.TR4Android:AppCompat-Extension-Library:v0.4.0'
 }
